# function-switcher

./: README.md  pyproject.toml
function_switcher/: __init__.py
